# C_CPP

ex1/: cipher.c
ex2/: manageStudents.c
ex3/: tweetsGenerator.c
ex4/: CMakeLists.txt  Makefile  README.md  hashmap.c  test_pairs.h  test_suite.c  vector.c  vector.h
ex5/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp
ex6/: CMakeLists.txt  Makefile  ex6_bonus_tests.cpp  ex6_tests.cpp  main.cpp  presubmit.cpp  vl_string.h  vl_vector.h
